--- a/src/styles/base/_settings.scss
+++ b/src/styles/base/_settings.scss
@@ -1,6 +1,17 @@
 // Colors
 
+$blue: #1c88bf;
+$dark-grey: #333333;
+$dark-blue: #364051;
+$grey: #888888;
+$off-white: #f7f7f7;
+
 // font-size
+
+$font-size-small: 1.4rem;
+$font-size-large: 1.8rem;
+
+//Spacing
 
 $s-size: 1.2rem;
 $m-size: 1.6rem;
